src/objects/Price_Rule__c.object
<CustomObject>
    <description>Object used to define price rules that will determine the best price on QLI based on physical, commercial and transactional attributes.</description>
    <fields>
        <fullName>Asset_Class_Operator__c</fullName>
        <label>Asset Class Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Class_Value__c</fullName>
        <label>Asset Class Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breakpoint__c</fullName>
        <label>Breakpoint</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Building_Operator__c</fullName>
        <label>Building Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Value__c</fullName>
        <label>Building Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Park_Operator__c</fullName>
        <label>Business Park Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Park_Value__c</fullName>
        <label>Business Park Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooling_Submeter_Operator__c</fullName>
        <label>Cooling Submeter Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cooling_Submeter_Value__c</fullName>
        <label>Cooling Submeter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_RERA_Index_Operator__c</fullName>
        <label>Current RERA Index Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>more than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_RERA_Index_Value__c</fullName>
        <label>Current RERA Index Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Operator__c</fullName>
        <label>Floor Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Floor_Value__c</fullName>
        <label>Floor Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Term_Operator__c</fullName>
        <label>Lease Term Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
                <value>
                    <fullName>more than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Term_Value__c</fullName>
        <inlineHelpText>in months</inlineHelpText>
        <label>Lease Term Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_Status_Operator__c</fullName>
        <label>Ownership Status Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Status_Value__c</fullName>
        <label>Ownership Status Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Revenue__c</fullName>
        <label>Performance Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricing_Group_Operator__c</fullName>
        <label>Pricing Group Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Group_Value__c</fullName>
        <label>Pricing Group Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category_Operator__c</fullName>
        <label>Product Category Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category_Value__c</fullName>
        <label>Product Category Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Category_Operator__c</fullName>
        <label>Product Sub-Category Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category_Value__c</fullName>
        <label>Product Sub-Category Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Cap_Operator__c</fullName>
        <label>Rent Cap Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>between</fullName>
                </value>
                <value>
                    <fullName>more than</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rent_Cap_Value__c</fullName>
        <label>Rent Cap Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_Submeter_Operator__c</fullName>
        <label>Utility Submeter Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal</fullName>
                </value>
                <value>
                    <fullName>include</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_Submeter_Value__c</fullName>
        <label>Utility Submeter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Price Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>